# nanowire

./: .coveragerc  .gitignore  .gitmodules  ASTMG173.csv  Input_sun_power.txt  LICENSE  LICENSE-APACHE  LICENSE-MIT  MANIFEST.in  README.rst  Session.vim  TODO  Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  commands.txt  comsol_compare.py  conf.py  convert.py  converted_spectra.csv  discrepancy_sources.txt  fix_confs.sh  fixed_text.yml  global_conv.py  gtest.ini  make_struct.py  move_files.py  out.pov  out.ps  plt_solar.py  postprocess.py  prod_config.ini  pyproject.toml  requirements.txt  s4_sim.lua  s4_sim.py  s4_sim_airbelow.py  s4_sim_gtest.py  s4_test.py  sanity_check.py  (+8 more)
NK/: 004_SiO2_k_Hz.txt  004_SiO2_n_Hz.txt  004_SiO2_nk_Hz.txt  005_GaAs_n_Walker_modified_Hz.txt  006_GaAs_k_Walker_modified_Hz.txt  006_GaAs_nk_Walker_modified_Hz.txt  007_Cyclotrene_nk_Hz.txt  007_cyclotrene_k_Hz.txt  007_cyclotrene_n_Hz.txt  007_cyclotrene_nk_Hz.txt  008_ITO_k_Hz.txt  008_ITO_n_Hz.txt  008_ITO_nk_Hz.txt  009_AlInP_k_Hz.txt  009_AlInP_n_Hz.txt  009_AlInP_nk_Hz.txt  GaAs_handbook_micrometers.txt  GaAs_nk_handbookvals.txt  Si_nk_Hz.txt
docs/: Code.rst  Home.rst  Introduction.rst  Makefile  Tutorial.rst  api.rst  conf.py  example.yml  index.rst  inputfilespec.rst  modules.rst  nanowire.optics.rst  nanowire.optics.scripts.rst  nanowire.optics.utils.rst  nanowire.preprocess.rst  nanowire.rst  postprocess.rst  tests.rst
misc/: add_option.py  calc_absorption_coeff.py  check_all_data.py  check_hdf5.sh  check_power.sh  compare_sims.py  comsol_compare.py  comsol_compare_old.py  (+20 more)
(+187 files in other folders)
