[metadata]
name = 'nanowire'
version = '0.0.1'
description = 'Tools for running simulations of nanowire solar cells'
author = 'Kyle Robertson'
author_email = 'kyle.wesley@me.com'
license = 'MIT/Apache-2.0'
url = 'https://github.com/kwrobert/nanowire'

[requires]
python_version = ['2.7', '3.5', '3.6', 'pypy', 'pypy3']

[build-system]
requires = ['setuptools', 'wheel']

[tool.hatch.commands]
prerelease = 'hatch build'
